Rearranging Java section

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -45,6 +45,8 @@ The highlights of the enhancements in the Java area are focused on support for t
 
 === Java Language Features
 
+TIP: To use the latest Java language features in the Java Editor, you'll need to run Apache NetBeans itself on the JDK that provides those features, so that Apache NetBeans will use the Java compiler from the JDK it runs on for code recognition, syntax coloring, etc. In these scenarios, make sure to uninstall nb-javac, if it is installed, and not to install and use it, when prompted, so that the Java compiler from JDK will be used, rather than nb-javac, which does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8.
+
 ==== Java 14
 
 - link:https://openjdk.java.net/jeps/359[JEP 359]: Records (Preview Feature) -- syntax coloring for the new "record" keyword; Navigator shows equals, hashCode, toString, etc; and formatting support for records.
@@ -81,13 +83,7 @@ image::TextBlockToString.gif[role="left", link="TextBlockToString.gif"]
 
 link:https://openjdk.java.net/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
 
-==== Java 11
- 
-link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
-
-==== Enablement of Java Preview Features
-
-TIP: link:https://openjdk.java.net/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
+TIP: link:https://openjdk.java.net/jeps/12[JEP 12], introduced in JDK 12, provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
 Preview features can only be used if the Java compiler's `--enable-preview` flag is set, as shown below for Maven. 
 
@@ -119,7 +115,9 @@ tasks.withType(JavaCompile).each {
 run.jvmArgs(['--enable-preview'])
 ----
 
-TIP: To use the latest Java language features, such as the new "record" keyword, in the Java Editor, you'll need to run Apache NetBeans itself on the JDK that provides those features, so that Apache NetBeans will use the Java compiler from the JDK it runs on for code recognition, syntax coloring, etc. In these scenarios, make sure to uninstall nb-javac, if it is installed, and not to install and use it, when prompted, so that the Java compiler from JDK will be used, rather than nb-javac, which does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8.
+==== Java 11
+ 
+link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
 
 === JavaFX
 
