openjfx Gluon samples

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -121,6 +121,13 @@ link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code 
 
 === JavaFX
 
+Two OpenJFX Gluon Maven artifacts are now registered in the New Project dialog, named "FXML JavaFX Maven Archetype (Gluon)" and "Simple JavaFX Maven Archetype (Gluon)", with their nbactions.xml files customized so that running and debugging can be done out of the box without any tweaking needed by the user.
+
+[.feature]
+--
+image::openjfx-gluon-artifacts.png[role="left", link="openjfx-gluon-artifacts.png"]
+-- 
+
 === Java EE
 
 === Java Build Systems
