--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -130,7 +130,7 @@ image::openjfx-gluon-artifacts-600.png[role="left", link="openjfx-gluon-artifact
 
 === Java EE
 
-TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. Apache NetBeans 12.0 is targeted for the integration of Jakarta EE 8 support.   
+TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. 
 
 ==== Support for Java EE Specifications
 
@@ -148,6 +148,11 @@ image::javaee-websocket.png[role="left", link="javaee-websocket.png"]
 
 ==== Support for Java EE Servers
 
+ * GlassFish
+ * Payara
+ * Tomcat
+ * WildFly
+
 === Java Build Systems
 
 ==== Maven
@@ -161,6 +166,8 @@ image::javaee-websocket.png[role="left", link="javaee-websocket.png"]
 The donation of the NetBeans C and C&#x2b;&#x2b; features from Oracle to Apache has been completed in the 11.3 timeframe, though the code has not yet been integrated into Apache NetBeans. This is anticipated to be a large task and may take some time, involving not only license changes and IP clearance in Apache, though also potentially code changes since not everything that was part of these features in Oracle was able to be donated by Oracle to Apache. 
 
 Until the code integration is complete, go to the Plugin Manager, enable the NetBeans IDE 8.2 Update Center, which lets you install the NetBeans IDE 8.2 modules providing C and C&#x2b;&#x2b; features.
+
+== Appearance
 
 == Miscellaneous
 
