Different image tweak

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -139,11 +139,9 @@ TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The
 image::new-java-ee-8.png[role="left", link="new-java-ee-8.png"]
 -- 
 
-- link:https://openjdk.java.net/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
-
 [.feature]
 --
-image::javaee-websocket.png[role="left", link="javaee-websocket.png"]
+image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 --  
 
 ==== Support for Java EE Servers
