--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -167,10 +167,25 @@ Until the code integration is complete, go to the Plugin Manager, enable the Net
 
 == Appearance
 
-== Miscellaneous
+A strong focus of the 12.0 release is around appearance, since the NetBeans dark look and feels support (Dark Metal and Dark Nimbus) has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel link:https://www.formdev.com/flatlaf/[by  Karl Tauber from FormDev Software GmbH], has been integrated. Also, enhancements for HiDPI on Windows have been introduced.
 
+=== FlatLaf Look and Feel Support
+
+image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
+
+=== Dark Metal and Dark Nimbus Look and Feel Support
+
+image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"]
+
+=== Miscellaneous
+
+- Windows LAF: Fix tiny or huge GUI font size on various HiDPI configurations.
+- Windows LAF: Fix incorrectly sized component icons (radio buttons, checkboxes, project tree expansion handles etc.) on various HiDPI configurations.
+- Windows LAF: Fix uneven borders on text components on non-integral HiDPI scaling factors, e.g. 150%.
+- Windows: Fix broken tab dragging (window rearrangements) on HiDPI displays.
+- Make toolbar browser icon take advantage of improved HiDPI scaling.
+- Implement simplified HeapView widget.
 - Fixed link:https://github.com/apache/netbeans/pull/2076[incorrectly positioned line-width marker] (i.e., shown at 82 characters instead of 80 characters), and inaccurate tab alignments. This bug existed at certain editor zoom levels on Windows, Linux, and MacOS, including on non-HiDPI screens.
-
 - Fixed link:https://github.com/apache/netbeans/pull/2025[clipped file names] in Projects window and Files window on Windows on HiDPI screens.
 
 
