--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -179,12 +179,9 @@ image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"
 
 === Miscellaneous
 
-- Windows LAF: Fix tiny or huge GUI font size on various HiDPI configurations.
-- Windows LAF: Fix incorrectly sized component icons (radio buttons, checkboxes, project tree expansion handles etc.) on various HiDPI configurations.
-- Windows LAF: Fix uneven borders on text components on non-integral HiDPI scaling factors, e.g. 150%.
-- Windows: Fix broken tab dragging (window rearrangements) on HiDPI displays.
-- Make toolbar browser icon take advantage of improved HiDPI scaling.
-- Implement simplified HeapView widget.
+- Windows LAF: Fixed tiny or huge GUI font size on various HiDPI configurations, fixed incorrectly sized component icons (radio buttons, checkboxes, project tree expansion handles etc.) on various HiDPI configurations, fixed uneven borders on text components on non-integral HiDPI scaling factors, e.g., 150%, fixed broken tab dragging (window rearrangements) on HiDPI displays.
+- Toolbar browser icon take advantage of improved HiDPI scaling.
+- Implemented simplified HeapView widget.
 - Fixed link:https://github.com/apache/netbeans/pull/2076[incorrectly positioned line-width marker] (i.e., shown at 82 characters instead of 80 characters), and inaccurate tab alignments. This bug existed at certain editor zoom levels on Windows, Linux, and MacOS, including on non-HiDPI screens.
 - Fixed link:https://github.com/apache/netbeans/pull/2025[clipped file names] in Projects window and Files window on Windows on HiDPI screens.
 
