high level overview added

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -31,7 +31,7 @@
 :experimental:
 :linkattrs:
 
-Welcome to Apache NetBeans 12.0 is the LTS release for 2020 of the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[Apache NetBeans quarterly release cycle].
+Welcome to Apache NetBeans 12.0 is the LTS release for 2020 of the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[Apache NetBeans quarterly release cycle]. 
 
 TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0, which consolidates the feature releases 11.1, 11.2, and 11.3. Feature releases have not been tested as heavily as the LTS release, which passes through the link:https://cwiki.apache.org/confluence/display/NETBEANS/Results+from+Apache+NetBeans+IDE+12.0+Community+Acceptance+survey[NetCAT Community Acceptance process] and is for these reasons the annual major release.
 
@@ -39,13 +39,17 @@ link:/download/nb120/nb120.html[Download, role="button success"]
 
 Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Apache+NetBeans+12.0[Apache NetBeans 12.0 Wiki].
 
+== Overview
+
+Apache NetBeans adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, introduces new out of the box support for JavaFX, upgrades its support for PHP, provides new dark look and feel options, and includes a wide range of fixes. These features are supported out of the box, without any additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project, consolidating the feature releases 11.1, 11.2, and 11.3. 
+
 == Java
 
 The highlights of the enhancements in the Java area are focused on support for the latest Java language features.
 
 === Java Language Features
 
-TIP: To use the latest Java language features in the Java Editor, you'll need to run Apache NetBeans itself on the JDK that provides those features, so that Apache NetBeans will use the Java compiler from the JDK it runs on for code recognition, syntax coloring, etc. In these scenarios, make sure to uninstall nb-javac, if it is installed, and not to install and use it, when prompted, so that the Java compiler from JDK will be used, rather than nb-javac, which does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8.
+To use the latest Java language features (listed below) in the Java Editor, run Apache NetBeans on the JDK that provides those features, enabling Apache NetBeans to use the Java compiler from the JDK it runs on for its Java Editor support for those features. In these scenarios, make sure to uninstall the NetBeans "nb-javac" fork, if it is installed, and to not install and when prompted to do so, which does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8. Over time, Apache NetBeans aims to move away completely from the "nb-javac" fork, except for  when JDK 8 is used to run Apache NetBeans, since JDK 8 does not provide the capabilities enabling Apache NetBeans to use its Java compiler in support of its Java Editor features.
 
 ==== Java 14
 
