--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -41,7 +41,7 @@ Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:
 
 == Overview
 
-Apache NetBeans adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, introduces new out of the box support for JavaFX, upgrades its support for PHP, provides new dark look and feel options, and includes a wide range of fixes. These features are supported out of the box, without any additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project, consolidating the feature releases 11.1, 11.2, and 11.3. 
+Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, introduces new out of the box support for JavaFX, upgrades its support for PHP, provides new dark look and feel options, and includes a wide range of fixes. These features are supported out of the box, without any additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project. We would like to thank all contributors, the community, and the Apache Software Foundation for the great co-operation and enthusiasm enabling this complex and exciting project to continue to inspire and be of use to developers all over the world.
 
 == Java
 
