--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -41,7 +41,11 @@ Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:
 
 == Overview
 
-Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, introduces new out of the box support for JavaFX, upgrades its support for PHP, provides new dark look and feel options, and includes a wide range of fixes. These features are supported out of the box, without any additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project. We would like to thank all contributors, the community, and the Apache Software Foundation for the great co-operation and enthusiasm enabling this complex and exciting project to continue to inspire and be of use to developers all over the world.
+Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, introduces new out of the box support for JavaFX, upgrades its support for PHP, provides new dark look and feel options, and includes a wide range of fixes. 
+
+All features provided by Apache NetBeans are supported out of the box, without additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project. 
+
+We would like to thank all contributors, the community, and the Apache Software Foundation for the great co-operation and enthusiasm enabling this complex and exciting project to continue to inspire and be of use to developers all over the world.
 
 == Java
 
@@ -49,7 +53,9 @@ The highlights of the enhancements in the Java area are focused on support for t
 
 === Java Language Features
 
-To use the latest Java language features (listed below) in the Java Editor, run Apache NetBeans on the JDK that provides those features, enabling Apache NetBeans to use the Java compiler from the JDK it runs on for its Java Editor support for those features. In these scenarios, make sure to uninstall the NetBeans "nb-javac" fork, if it is installed, and to not install and when prompted to do so, which does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8. Over time, Apache NetBeans aims to move away completely from the "nb-javac" fork, except for  when JDK 8 is used to run Apache NetBeans, since JDK 8 does not provide the capabilities enabling Apache NetBeans to use its Java compiler in support of its Java Editor features.
+To use the latest Java language features (listed below) in the Java Editor, run Apache NetBeans on the JDK that provides those features, enabling Apache NetBeans to use the Java compiler from the JDK it runs on for its Java Editor support for those features. 
+
+TIP: In these scenarios, make sure to uninstall the NetBeans "nb-javac" fork, if it is installed, and to not install it when prompted to do so. The "nb-javac" fork does not support the latest Java language features and is mandatory only when you run Apache NetBeans on JDK 8. Over time, Apache NetBeans aims to move away completely from the "nb-javac" fork, except for  when JDK 8 is used to run Apache NetBeans, since JDK 8 does not provide the capabilities enabling Apache NetBeans to use its Java compiler in support of its Java Editor features.
 
 ==== Java 14
 
