Various tweaks and new additions

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -75,7 +75,7 @@ image::ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"
 
 ==== Java 13
 
-link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- Java editor hint has been introduced for converting to/from text blocks.
+- link:https://openjdk.java.net/jeps/355[JEP 355]: Text Blocks (Preview) -- Java editor hint has been introduced for converting to/from text blocks.
 
 [.feature]
 --
@@ -92,6 +92,11 @@ image::TextBlockToString.gif[role="left", link="TextBlockToString.gif"]
 ==== Java 12
 
 link:https://openjdk.java.net/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
+
+[.feature]
+--
+image::code-completion-multiple-case-2.png[role="left", link="code-completion-multiple-case-2.png"]
+-- 
 
 TIP: link:https://openjdk.java.net/jeps/12[JEP 12], introduced in JDK 12, provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
 
@@ -140,9 +145,11 @@ image::openjfx-gluon-artifacts-600.png[role="left", link="openjfx-gluon-artifact
 
 === Java EE
 
-TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. 
+Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. 
 
 ==== Support for Java EE Specifications
+
+Java EE 8 support, for the first time in 11.1, for Maven-based and Gradle-based Web applications. The Java EE 8 support provides the ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
 
 [.feature]
 --
@@ -157,9 +164,9 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 ==== Support for Java EE Servers
 
  * GlassFish
- * Payara
+ * Payara integration out of the box for the first time, from 11.1.
  * Tomcat
- * WildFly
+ * WildFly integration out of the box for the first time, from 12.0.
 
 === Java Build Systems
 
@@ -181,11 +188,11 @@ A strong focus of the 12.0 release is around appearance, since the NetBeans dark
 
 === FlatLaf Look and Feel Support
 
-image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
+image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png", border="1px solid black"]
 
 === Dark Metal and Dark Nimbus Look and Feel Support
 
-image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"]
+image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png", border="1px solid black"]
 
 === Miscellaneous
 
