--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -41,7 +41,7 @@ Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:
 
 == Overview
 
-Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, introduces new out of the box support for JavaFX, upgrades its support for PHP, provides new dark look and feel options, and includes a wide range of fixes. 
+Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, brings multiple enhancements to its Gradle support, introduces new out of the box support for JavaFX, upgrades and extends its support for PHP, provides new dark look and feel options, and includes a wide range of fixes. 
 
 All features provided by Apache NetBeans are supported out of the box, without additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project. 
 
@@ -91,7 +91,7 @@ image::TextBlockToString.gif[role="left", link="TextBlockToString.gif"]
 
 ==== Java 12
 
-link:https://openjdk.java.net/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
+- link:https://openjdk.java.net/jeps/325[JEP 325]: Switch Expressions (Preview) – code completion for JEP-325 preview feature for multiple case labels, as shown below.
 
 [.feature]
 --
@@ -132,7 +132,7 @@ run.jvmArgs(['--enable-preview'])
 
 ==== Java 11
  
-link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
+- link:https://openjdk.java.net/jeps/330[JEP 330]: Launch Single-File Source-Code Programs -- single Java source files can be created, outside of projects, in the Favorites window, and they can be run and debugged, if NetBeans is running on JDK 11 or later.
 
 === JavaFX
 
@@ -156,6 +156,8 @@ Java EE 8 support, for the first time in 11.1, for Maven-based and Gradle-based 
 image::new-java-ee-8.png[role="left", link="new-java-ee-8.png"]
 -- 
 
+Support for link:https://github.com/apache/netbeans/pull/1633[JSF 2.3: CDI Changes for JSF Artifact Injection] (introduced in 11.3), e.g., "f:websocket" is now supported.
+
 [.feature]
 --
 image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
@@ -163,8 +165,8 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 
 ==== Support for Java EE Servers
 
- * GlassFish
- * Payara integration out of the box for the first time, from 11.1.
+ * GlassFish support to 5.0.1.
+ * Payara integration out of the box for the first time, from 11.1, including Payara Platform 5.194/5.201 support and Payara Server Hot Deploy support.
  * Tomcat
  * WildFly integration out of the box for the first time, from 12.0.
 
@@ -175,6 +177,15 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 ==== Gradle
 
 == PHP
+
+The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
+
+[.feature]
+--
+image::php-7.4.png[role="left", link="php-7.4.png"]
+-- 
+
+Further details on new support for PHP 7.4 features are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
 
 == C/C++
 
