Small language tweaks

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -41,7 +41,7 @@ Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:
 
 == Overview
 
-Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle to support Java Web development, enhances its best of breed Apache Maven tooling, brings multiple enhancements to its Gradle support, introduces new out of the box templates for JavaFX, upgrades and extends its PHP editor, provides new dark look and feel options, and includes a wide range of fixes. 
+Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle for Java Web development, enhances its best of breed Apache Maven tooling, brings multiple enhancements for usage of Gradle, introduces new out of the box templates for JavaFX, upgrades and extends its PHP editor, provides new dark look and feel options, and includes a wide range of fixes. 
 
 All features provided by Apache NetBeans are supported out of the box, without additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project. 
 
