Various tweaks, new additions

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -33,7 +33,7 @@
 
 Welcome to Apache NetBeans 12.0!
 
-TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0, which consolidates the feature releases 11.1, 11.2, and 11.3. Feature releases have not been tested as heavily as the LTS release, which passes through the link:https://cwiki.apache.org/confluence/display/NETBEANS/Results+from+Apache+NetBeans+IDE+12.0+Community+Acceptance+survey[NetCAT Community Acceptance process] and is for these reasons the annual major release. For details, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[Apache NetBeans quarterly release cycle].
+TIP: The LTS release of the Apache NetBeans 12 cycle is Apache NetBeans 12.0, which consolidates the feature releases link:http://netbeans.apache.org/download/nb111/index.html[11.1], link:http://netbeans.apache.org/download/nb112/index.html[11.2], and link:http://netbeans.apache.org/download/nb113/index.html[11.3]. Feature releases have not been tested as heavily as the LTS release, which passes through the link:https://cwiki.apache.org/confluence/display/NETBEANS/Results+from+Apache+NetBeans+IDE+12.0+Community+Acceptance+survey[NetCAT Community Acceptance process] and is for these reasons the annual major release. For details, see the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[Apache NetBeans quarterly release cycle].
 
 link:/download/nb120/nb120.html[Download, role="button success"]
 
@@ -41,7 +41,7 @@ Below are the highlights of Apache NetBeans 12.0, for a full list, see the link:
 
 == Overview
 
-Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle for Java Web development, enhances its best of breed Apache Maven tooling, brings multiple enhancements for usage of Gradle, introduces new out of the box templates for JavaFX, upgrades and extends its PHP editor, provides new dark look and feel options, and includes a wide range of fixes. 
+Apache NetBeans 12.0 adds support for the latest Java language features, integrates new code donations from Oracle for Java Web development, enhances its best of breed Apache Maven tooling, brings multiple enhancements for users of Gradle, introduces new out of the box templates for JavaFX, upgrades and extends its PHP editor, provides new dark look and feel options, and includes a wide range of fixes. 
 
 All features provided by Apache NetBeans are supported out of the box, without additional plugins needing to be installed, and all for free. Apache NetBeans 12.0 is the first LTS release of NetBeans as a top level Apache project. 
 
@@ -145,7 +145,7 @@ image::openjfx-gluon-artifacts-600.png[role="left", link="openjfx-gluon-artifact
 
 === Java EE
 
-Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. 
+TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. 
 
 ==== Support for Java EE Specifications
 
@@ -174,11 +174,67 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 
 ==== Maven
 
+- Java compiler args, e.g., "--enable-preview", passed to Java editor from Maven: link:https://github.com/apache/netbeans/pull/1173[https://github.com/apache/netbeans/pull/1173]
+
+[source,xml]
+----
+<build>
+   <plugins>
+      <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+              <compilerArgs>
+                    <arg>--enable-preview</arg>
+              </compilerArgs>
+         </configuration>
+     </plugin>
+  </plugins>
+</build>
+----
+
+- Fix for JaCoCo Maven integration, in 11.1: link:https://github.com/apache/netbeans/pull/1286[https://github.com/apache/netbeans/pull/1286]
+
+[source,xml]
+----
+<plugin>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.3</version>
+    <executions>
+        <execution>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+            <configuration>
+               <outputDirectory>${project.reporting.outputDirectory}/jacoco_test</outputDirectory>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
+----
+
+- Prevent Maven libraries from being excluded: link:https://github.com/apache/netbeans/pull/1271[https://github.com/apache/netbeans/pull/1271]
+
 ==== Gradle
 
-== PHP
+ * Gradle Java EE support.
+ * Upgraded Gradle Tooling API to 6.0.
+ * Added support for Custom Gradle Home.
+ * Added support for Gradle Composite Projects.
+ * Recognize Kotlin-based Gradle projects.
+ * Gradle project can be reloaded forcibly.
 
-The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
+== PHP, JavaScript, and HTML
+
+ * The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
 
 [.feature]
 --
@@ -186,6 +242,15 @@ image::php-7.4.png[role="left", link="php-7.4.png"]
 -- 
 
 Further details on new support for PHP 7.4 features are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
+
+ * TypeScript editor, introduced in 11.3.
+
+[.feature]
+--
+image::typescript-11.3.png[role="left", link="typescript-11.3.png"]
+-- 
+
+ * Fix for Chrome connector connection with Apache NetBeans, in 11.3.
 
 == C/C++
 
