Box around image

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -268,7 +268,12 @@ image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png", border="1px solid 
 
 === Dark Metal and Dark Nimbus Look and Feel Support
 
-image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png", border="1px solid black"]
+[.feature]
+--
+
+image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"]
+
+--
 
 === Miscellaneous
 
