Tweaks and additions

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -136,7 +136,7 @@ run.jvmArgs(['--enable-preview'])
 
 === JavaFX
 
-Two OpenJFX Gluon Maven artifacts are now registered in the New Project dialog, named "FXML JavaFX Maven Archetype (Gluon)" and "Simple JavaFX Maven Archetype (Gluon)", with their nbactions.xml files customized so that running and debugging can be done out of the box without any tweaking needed by the user.
+Two OpenJFX Gluon Maven artifacts are now registered in the New Project dialog, named "link:https://mvnrepository.com/artifact/org.openjfx/javafx-archetype-fxml[FXML JavaFX Maven Archetype (Gluon)]" and "link:https://mvnrepository.com/artifact/org.openjfx/javafx-archetype-simple[Simple JavaFX Maven Archetype (Gluon)]", with their nbactions.xml files customized so that running and debugging can be done out of the box without any tweaking needed by the user.
 
 [.feature]
 --
@@ -257,6 +257,8 @@ image::typescript-11.3.png[role="left", link="typescript-11.3.png"]
 The donation of the NetBeans C and C&#x2b;&#x2b; features from Oracle to Apache has been completed in the 11.3 timeframe, though the code has not yet been integrated into Apache NetBeans. This is anticipated to be a large task and may take some time, involving not only license changes and IP clearance in Apache, though also potentially code changes since not everything that was part of these features in Oracle was able to be donated by Oracle to Apache. 
 
 Until the code integration is complete, go to the Plugin Manager, enable the NetBeans IDE 8.2 Update Center, which lets you install the NetBeans IDE 8.2 modules providing C and C&#x2b;&#x2b; features.
+
+== General
 
 == Appearance
 
