tweaks for lafs

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -262,18 +262,18 @@ Until the code integration is complete, go to the Plugin Manager, enable the Net
 
 == Appearance
 
-A strong focus of the 12.0 release is around appearance, since the NetBeans dark look and feels support (Dark Metal and Dark Nimbus) has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel link:https://www.formdev.com/flatlaf/[by  Karl Tauber from FormDev Software GmbH], has been integrated. Also, enhancements for HiDPI on Windows have been introduced.
+A key focus of the 12.0 release is around appearance, since the NetBeans dark look and feels support (Dark Metal and Dark Nimbus) has been donated by Oracle to Apache, while FlatLaf, a completely new look and feel link:https://www.formdev.com/flatlaf/[by  Karl Tauber from FormDev Software GmbH], has been integrated. Also, enhancements for HiDPI on Windows have been introduced.
 
 === FlatLaf Look and Feel Support
 
-image::FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png", border="1px solid black"]
+image::FlatLaf-11.3-small.png[role="left", link="FlatLaf-11.3.png", border="1px solid black"]
 
 === Dark Metal and Dark Nimbus Look and Feel Support
 
 [.feature]
 --
 
-image::dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"]
+image::dark-metal-nimbus-11.3-small.png[role="left", link="dark-metal-nimbus-11.3.png"]
 
 --
 
