--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -225,12 +225,14 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 
 ==== Gradle
 
- * Gradle Java EE support.
- * Upgraded Gradle Tooling API to 6.0.
- * Added support for Custom Gradle Home.
- * Added support for Gradle Composite Projects.
- * Recognize Kotlin-based Gradle projects.
- * Gradle project can be reloaded forcibly.
+The key feature for Gradle in Apache NetBeans 12.0 is its support for Java EE.
+ 
+ [.feature]
+--
+image::gradle-12.0.png[role="left", link="gradle-12.0.png"]
+-- 
+
+However, there are multiple other new features, enhancements, and fixes for Gradle users, providing comprehensive tooling fos Gradle for the first time. These include upgraded Gradle Tooling API to 6.0, new Java Frontend Application wizard for Gradle, debugger support for Gradle Web projects, support for Custom Gradle Home, support for composite projects, Kotlin-based Gradle projects, and forceable reloading of Gradle projects.
 
 == PHP, JavaScript, and HTML
 
