--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -227,10 +227,12 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 
 The key feature for Gradle in Apache NetBeans 12.0 is its support for Java EE.
  
- [.feature]
+[.feature]
 --
 image::gradle-12.0.png[role="left", link="gradle-12.0.png"]
 -- 
+
+TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. 
 
 However, there are multiple other new features, enhancements, and fixes for Gradle users, providing comprehensive tooling fos Gradle for the first time. These include upgraded Gradle Tooling API to 6.0, new Java Frontend Application wizard for Gradle, debugger support for Gradle Web projects, support for Custom Gradle Home, support for composite projects, Kotlin-based Gradle projects, and forceable reloading of Gradle projects.
 
