Various tweaks and smoothing out text

--- a/netbeans.apache.org/src/content/download/nb120/index.asciidoc
+++ b/netbeans.apache.org/src/content/download/nb120/index.asciidoc
@@ -174,7 +174,7 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 
 ==== Maven
 
-- Java compiler args, e.g., "--enable-preview", passed to Java editor from Maven: link:https://github.com/apache/netbeans/pull/1173[https://github.com/apache/netbeans/pull/1173]
+The key new feature for Maven users in Apache NetBeans 12.0 is its support for Java language preview features, introduced in 11.1. Java compiler arguments, e.g., "--enable-preview", link:https://github.com/apache/netbeans/pull/1173[are passed to Java editor from Maven].
 
 [source,xml]
 ----
@@ -193,7 +193,7 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 </build>
 ----
 
-- Fix for JaCoCo Maven integration, in 11.1: link:https://github.com/apache/netbeans/pull/1286[https://github.com/apache/netbeans/pull/1286]
+An important fix has been done to enable link:https://github.com/apache/netbeans/pull/1286[JaCoCo Maven integration], in 11.1.
 
 [source,xml]
 ----
@@ -221,11 +221,9 @@ image::javaee-websocket-600.png[role="left", link="javaee-websocket-600.png"]
 </plugin>
 ----
 
-- Prevent Maven libraries from being excluded: link:https://github.com/apache/netbeans/pull/1271[https://github.com/apache/netbeans/pull/1271]
-
 ==== Gradle
 
-The key feature for Gradle in Apache NetBeans 12.0 is its support for Java EE.
+The key new feature for Gradle users in Apache NetBeans 12.0 is its support for Java EE.
  
 [.feature]
 --
@@ -234,11 +232,11 @@ image::gradle-12.0.png[role="left", link="gradle-12.0.png"]
 
 TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. 
 
-However, there are multiple other new features, enhancements, and fixes for Gradle users, providing comprehensive tooling fos Gradle for the first time. These include upgraded Gradle Tooling API to 6.0, new Java Frontend Application wizard for Gradle, debugger support for Gradle Web projects, support for Custom Gradle Home, support for composite projects, Kotlin-based Gradle projects, and forceable reloading of Gradle projects.
+However, there are multiple other new features, enhancements, and fixes for Gradle users, which together provide comprehensive Gradle tooling for the first time and fills in multiple gaps. These include upgraded Gradle Tooling API to 6.0, new Java Frontend Application wizard for Gradle, debugger support for Gradle Web projects, support for custom Gradle Home, support for composite projects, Kotlin-based Gradle projects, and forceable reloading of Gradle projects.
 
 == PHP, JavaScript, and HTML
 
- * The highlights of enhancements in the PHP area are focused on support for PHP 7.4.
+ The key new feature for PHP users in Apache NetBeans 12.0 is its support for PHP 7.4.
 
 [.feature]
 --
@@ -247,14 +245,14 @@ image::php-7.4.png[role="left", link="php-7.4.png"]
 
 Further details on new support for PHP 7.4 features are provided link:https://cwiki.apache.org/confluence/display/NETBEANS/11.2+Feature%3A+PHP[here].
 
- * TypeScript editor, introduced in 11.3.
+ In addition, Apache NetBeans 12.0 integrates out of the box a TypeScript editor, introduced in 11.3.
 
 [.feature]
 --
 image::typescript-11.3.png[role="left", link="typescript-11.3.png"]
 -- 
 
- * Fix for Chrome connector connection with Apache NetBeans, in 11.3.
+For users of the Chrome/NetBeans integration, a fix has been integrated enabling the Chrome connector to work correctly with Apache NetBeans, since 11.3.
 
 == C/C++
 
